--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "DANUWA-MD",
-  "description": "Javascript WhatsApp bot made by Danuka Dissanayake",
-  "logo": "https://github.com/DANUWA-MD/DANUWA-MD/blob/main/images/DANUWA-MD.png?raw=true",
-  "keywords": ["DANUWA-MD"],
+  "name": "SENURA-MD",
+  "description": "Javascript WhatsApp bot made by Senura Herath",
+  "logo": "https://github.com/senuraya/Senura_Md/blob/main/images/ChatGPT%20Image%20Aug%2019,%202025,%2005_22_42%20PM.png?raw=true",
+  "keywords": ["SENURA-MD"],
   "success_url": "/",
 
   "env": {
