--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "qrcode-terminal": "^0.12.0",
     "tmp": "^0.2.5",
     "util": "^0.12.5",
-    "vm": "^0.1.0"
+    "vm": "^0.1.0",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "mime-types": "^2.1.35"
   }
 }
