--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "tmp": "^0.2.5",
     "util": "^0.12.5",
     "vm": "^0.1.0",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "mime-types": "^2.1.35"
+    "google-translate-api-x": "^1.0.6",
+    "mime-types": "^2.1.35",
+    "@google/generative-ai": "^0.1.0"
   }
 }
