--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "util": "^0.12.5",
     "vm": "^0.1.0",
     "google-translate-api-x": "^1.0.6",
-    "mime-types": "^2.1.35",
-    "@google/generative-ai": "^0.1.0"
+    "mime-types": "^2.1.35"
   }
 }
